[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/cursor.png" type="Texture" id=1]
[ext_resource path="res://Scenes/StartGame.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Player/Cloud.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/startBcg.png" type="Texture" id=4]
[ext_resource path="res://Assets/Font/LapsusPro-Bold.otf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Flag/cloud1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Flag/cloud3.png" type="Texture" id=7]
[ext_resource path="res://Assets/happyCloud.png" type="Texture" id=8]
[ext_resource path="res://Assets/SFX/One Man Symphony - Royalty Free Soundtrack Collection - 48 Loading Menu-Screen Theme.ogg" type="AudioStream" id=9]
[ext_resource path="res://Scenes/FontSpeedLabel.tscn" type="PackedScene" id=10]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/jimmy.png-f83fa9faa96e4b5f12267751e20d6db3.stex"

[sub_resource type="DynamicFont" id=2]
size = 75
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 5 )

[node name="StartGame" type="Node2D"]
position = Vector2( 0, 24 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -24 )
texture = ExtResource( 4 )
centered = false

[node name="Cloud" parent="." instance=ExtResource( 3 )]
position = Vector2( 72, 16 )
text = "I am not Jimmy, I am Cloudy!"

[node name="Cloud2" parent="." instance=ExtResource( 3 )]
position = Vector2( 80, 256 )
text = "WOWIEEEEEE !!!"
textu = ExtResource( 8 )

[node name="Cloud3" parent="." instance=ExtResource( 3 )]
position = Vector2( 720, 241 )
text = "This game is so much fun!"
textu = ExtResource( 6 )

[node name="Cloud4" parent="." instance=ExtResource( 3 )]
position = Vector2( 712, 0 )
text = "I am so tired. I played this game all night."
textu = ExtResource( 7 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 424.0
margin_top = 177.0
margin_right = 623.0
margin_bottom = 344.0
texture_normal = SubResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_left = 312.0
margin_right = 704.0
margin_bottom = 177.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center] Jimmy the Flag! [/center]"
text = " Jimmy the Flag! "
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_left = 352.0
margin_top = 344.0
margin_right = 696.0
margin_bottom = 477.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center] Click on Jimmy to start the game! [/center]"
text = " Click on Jimmy to start the game! "
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_left = -24.0
margin_top = 496.0
margin_right = 576.0
margin_bottom = 528.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Music by onemansymphony.bandcamp.com [/center]"
text = "Music by onemansymphony.bandcamp.com "
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_left = 672.0
margin_top = 496.0
margin_right = 1008.0
margin_bottom = 528.0
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Made for [color=red]WOWIE[/color] [color=blue]JAM[/color] 3.0 [/center]"
text = "Made for WOWIE JAM 3.0 "
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MouseCursor" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true

[node name="FontSpeedLabel" parent="." instance=ExtResource( 10 )]
position = Vector2( 808, 544 )

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
